siphash.c
@@ -417,7 +417,7 @@ sip_hash24(const uint8_t key[16], const uint8_t *data, size_t len)
 	    SIP_2_ROUND(m, v0, v1, v2, v3);
         }
     }
-#elif BYTE_ORDER == BIG_ENDIAN
+#else
     for (; data != end; data += sizeof(uint64_t)) {
 	m = U8TO64_LE(data);
 	SIP_2_ROUND(m, v0, v1, v2, v3);
@@ -453,7 +453,7 @@ sip_hash24(const uint8_t key[16], const uint8_t *data, size_t len)
 	    last.lo |= ((uint32_t *) end)[0];
   #endif
 	    break;
-#elif BYTE_ORDER == BIG_ENDIAN
+#else
 	    OR_BYTE(3);
 #endif
 	case 3:
